--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
-title: Mental models for designers PART 2
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: Sep 14 2021
+title: 天日的Blog-HelloWorld
+description: "第一篇文章"
+date: 2022-5-7
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+# Welcome!
