--- a/posts/example-post.mdx
+++ b/posts/example-post.mdx
@@ -1,24 +1,24 @@
 ---
-title: How to create SVG-ready icon symbols in Sketch PART 2
-description: "Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum."
-date: May 8 2021
+title: 测试文档
+description: Always believe that something good is about to happen"
+date: 2022-5-7
 ---
 
-Something has always existed. According to physics, there can never be true physical nothingness—though there can be times when existence resembles nothing, such as a vacuum (the state of minimum possible energy) (Phys.org). Creating a space where there are no quantum fluctuations requires an enormous amount of energy, and there would be a remnant of that energy in that space afterwards if the fluctuations were flushed out, plus an unstable environment (1veritasium). Even on computers, deleted data is not actually tossed away, by rather written over.
+永远相信美好的事情即将发生
 
-# h1 Heading
+# h1永远相信美好的事情即将发生
 
-## h2 Heading
+## h2永远相信美好的事情即将发生
 
-### h3 Heading
+### h3永远相信美好的事情即将发生
 
-#### h4 Heading
+#### h4永远相信美好的事情即将发生
 
-##### h5 Heading
+##### h5永远相信美好的事情即将发生
 
-###### h6 Heading
+###### h6永远相信美好的事情即将发生
 
-## Horizontal Rules
+## 永远相信美好的事情即将发生
 
 ---
 
