--- a/posts/example-post.mdx
+++ b/posts/example-post.mdx
@@ -1,6 +1,6 @@
 ---
 title: 测试文档
-description: Always believe that something good is about to happen"
+description: Always believe that something good is about to happen
 date: 2022-5-7
 ---
 
